Fixed spacing and spaces

--- a/public/privacy/style.css
+++ b/public/privacy/style.css
@@ -3,13 +3,13 @@ p, li {
 }
 
 .page-content {
-    gap: 40px;
+    gap: var(--bubble-gap);
 }
 
 .terms-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    gap: var(--bubble-gap);
     justify-items: center;
 }
 .terms-container > p {
